2010-12-12 Malignant Manor <malignantmanor@users.sourceforge.net>
	*schedule.cc: Improved Automaton baking in Silver Seed.
		display_wares cost changed in SI (needed for Automaton).

2010-12-12 Malignant Manor <malignantmanor@users.sourceforge.net>
	*schedule.cc: The Moonshade Baker now displays goods. Removed accidental temporary flag.
		gamemgr\sigame.cc: Map patches were added to remove	the bread, dough, and flour in
		Moonshade that are on the wrong tables. Dev games are now excluded from	all the SI
		map patches.

2010-12-11 Malignant Manor <malignantmanor@users.sourceforge.net>
	*schedule.cc: Reverted baking to_table cost. Added missing else statement in to_table.

2010-12-11 Malignant Manor <malignantmanor@users.sourceforge.net>
	*schedule.cc: I fixed a crash in the baking schedule state find_leftovers caused by the
		oven getting cached out.

2010-12-11 Malignant Manor <malignantmanor@users.sourceforge.net>
	*schedule.cc: In baking schedule, clear_display and remove_food now use the new baked
		quality. I changed size() check to empty() for use_potion.

2010-12-11 Malignant Manor <malignantmanor@users.sourceforge.net>
	*schedule.*: The baking schedule should now clean up when needed. Flour, dough, and baked
		goods from left over from old saved games will not be cleaned up since this relies on
		quality number. Quality 50 is for dough	and quality 51 is for items that have been
		placed in the oven.

2010-12-11 Malignant Manor <malignantmanor@users.sourceforge.net>
	*schedule.cc: Reverting 6515 changes since the temporary schedule items will likely crash
		during chunk cache out (Avatar death is a good example).

2010-12-10 Malignant Manor <malignantmanor@users.sourceforge.net>
	* Actors.cc: Npcs do not heal hourly if poisoned. If in the party, they also don't heal if
		starving or freezing. Overheating in SI is not checked since overheating is handled by
		usecode function 0x6AF.
	* keyactions.cc: I fixed fullscreen toggle for OpenGL.